--- a/.github/workflows/build-on-push.yml
+++ b/.github/workflows/build-on-push.yml
@@ -23,7 +23,7 @@ jobs:
           export LANG=C
           sudo apt-get update
           sudo apt-get build-dep --no-install-recommends -y .
-          sudo apt-get install --no-install-recommends -y git-buildpackage debhelper devscripts gcc-aarch64-linux-gnu
+          sudo apt-get install --no-install-recommends -y git-buildpackage debhelper devscripts gcc-aarch64-linux-gnu g++-aarch64-linux-gnu binutils-aarch64-linux-gnu
           debuild --no-lintian -us -uc -b -aarm64 -Pcross -d
 
       - name: Workaround actions
