Use self-hosted runners

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,21 +7,17 @@ permissions:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: [ self-hosted, ubuntu-24.04, pkg ]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Build packages
         run: |
-          export $(dpkg-architecture -aarm64)
-          export CROSS_COMPILE=aarch64-linux-gnu-
-          export CC=aarch64-linux-gnu-gcc
-          export LANG=C
           sudo apt-get update
           sudo apt-get build-dep --no-install-recommends -y .
-          sudo apt-get install --no-install-recommends -y git-buildpackage debhelper devscripts gcc-12 gcc-12-aarch64-linux-gnu
-          debuild --no-lintian -us -uc -b -aarm64 -Pcross -d
+          sudo apt-get install --no-install-recommends -y git-buildpackage debhelper devscripts
+          debuild --no-lintian -us -uc
 
       - name: Workaround actions
         run: |
