--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
 
   release:
     needs: build
-    runs-on: ubuntu-latest
+    runs-on: [ self-hosted, ubuntu-24.04, pkg ]
     if: ${{ github.event_name != 'pull_request' && github.ref_name == 'main' }}
     steps:
       - name: Checkout
