--- a/.github/workflows/build-on-push.yml
+++ b/.github/workflows/build-on-push.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y reprepro gnupg git unzip
+          sudo apt-get install -y reprepro gnupg git unzip openssh
 
       - uses: actions/download-artifact@v4
         with:
