chore: update CI workflows to use Debian 12 instead of Ubuntu 24.04

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,7 +7,7 @@ permissions:
 
 jobs:
   build:
-    runs-on: [ self-hosted, ubuntu-24.04, pkg ]
+    runs-on: [ self-hosted, debian-12, pkg ]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
