--- a/.github/workflows/build-on-push.yml
+++ b/.github/workflows/build-on-push.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build:
-    runs-on: [ self-hosted, ubuntu-24.04, pkg ]
+    runs-on: [ self-hosted, debian-12, pkg ]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
